--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -10,9 +10,9 @@ description = "A python wrapper and interface around AuToBI"
 readme = "README.md"
 requires-python = ">=3.9"
 classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
+  "Programming Language :: Python :: 3",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: OS Independent",
 ]
 dynamic = ["dependencies"]
 
@@ -20,7 +20,7 @@ dynamic = ["dependencies"]
 include-package-data = true
 
 [tool.setuptools.package-data]
-jjws_package_template = ["**/data/*", "*.jar"]
+autobi_py = ["**/data/*", "*.jar"]
 
 [tool.setuptools.packages.find]
 where = ["src"]
