--- a/.github/workflows/adapter_ci.yml
+++ b/.github/workflows/adapter_ci.yml
@@ -1,33 +1,24 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Adapter CI
-
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
-
+    branches: ["main"]
 permissions:
   contents: read
-
 jobs:
-  build:
-
+  test:
+    name: Build and test AuToBI and Adapter
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 21
-      uses: actions/setup-java@v3
-      with:
-        java-version: '21'
-        distribution: 'temurin'
-        cache: 'sbt'
-    - name: Run AuToBI tests
-      run: sbt autobi/test
-    - name: Run adapter tests
-      run: sbt adapter/test
+      - uses: actions/checkout@v3
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: 'sbt'
+      - name: Run AuToBI tests
+        run: sbt autobi/test
+      - name: Run adapter tests
+        run: sbt adapter/test
