--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.2.0"
 authors = [{ name = "JJWRoeloffs", email = "jelleroeloffs@gmail.com" }]
 description = "A python wrapper and interface around AuToBI"
 readme = "README.md"
-requires-python = ">=3.9, <3.11"
+requires-python = ">=3.9"
 classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
@@ -30,7 +30,7 @@ include = ["src"]
 exclude = ["**/__pycache__"]
 reportMissingImports = true
 
-pythonVersion = "3.10"
+pythonVersion = "3.11"
 pythonPlatform = "Linux"
 
 executionEnvironments = [{ root = "src" }]
